plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '1.0.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
//    implementation 'javax.servlet:jstl'   # Spring Boot 3.0 미만 JSP 종속
    implementation 'jakarta.servlet:jakarta.servlet-api' //Spring Boot 3.0 이상
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //Spring Boot 3.0 이상
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //Spring Boot 3.0 이상
    implementation 'org.springframework.boot:spring-boot-starter-validation'    // Spring Boot 3.0 이상 validation 의존성
    runtimeOnly 'com.mysql:mysql-connector-j'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
